--- a/index.html
+++ b/index.html
@@ -893,7 +893,20 @@
             <input id="cyb_cd_in" class="_in_aq" placeholder="i2a01pmzshn1">
             <button class="tst_btn rpl" id="cyb_cd_sbm"
                 onclick="if (document.getElementById('cyb_cd_in').value != ''){window.location.hash = '/cyberhunt/'+document.getElementById('cyb_cd_in').value}">Submit</button>
+            <span>Joined Cyberhunts</span>
+            <div id = "cyb_joined" style="overflow-y: scroll;display: flex;flex-direction: column;height: 30vh;width: 40vw;border: 3px greenyellow solid;padding-left: 6px;"></div>
         </div>
+        <div id = "cyb_edit">
+
+        </div>
+        <div id = "cyb_viewer" class="flex_type" style="width:100%;height:100%">
+            <div style="display:flex;flex-direction:column;justify-content: left;width:100%;margin-left:5vw;">
+                <span style="font-size: 16px;">Welcome to</span>
+                <span id = "cyb_v_name" style="font-size: 25px">CyberHunt Name</span>
+                <span id = "cyb_v_status" style="font-size: 19px">started on XX:XX</span>
+            </div>
+        </div>
+        
     </div>
     <div id = "finishedtestinfo" class="full_page flex_type" style = "overflow-y: scroll;">
         <span style="font-size: 5vh;color:yellow" id="fti_title">Test Name</span>
