--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
 
+    <!-- Custom PDF Viewer -->
     <style>
         .full_page {
             display: none
